--- a/bubble_sorter/sorter.html
+++ b/bubble_sorter/sorter.html
@@ -9,8 +9,7 @@
 <body>
         <div class='a'>Введите элементы массива через пробел</div>
         <div class='b'><input id='mass' class='d' type="text"></div>
-        <div class='b'><input type="button" id="butt" value="Сортировать"></div>
-        <a href="#" class="my_button">Клик</a>
+        <div class='b'><div id="butt" class="my_button">Клик</div></div>
 </body>
 <script src="sorter.js"></script>
 </html>
