--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </li>
             <li><a href="/bubble_sorter/sorter.html"><i class="fa fa-"></i>Сортировка</a></li>
-            <li><a href="#"><i class="fa fa-"></i>Три</a></li>
+            <li><a href="/click_game/game.html"><i class="fa fa-"></i>Игра</a></li>
             <li><a href="#"><i class="fa fa-"></i>Четыре</a></li>
             <li><a href="#"><i class="fa fa-"></i>Пять</a></li>
         </ul>
